Add comment (flickering GIF)

--- a/a1/index.htm
+++ b/a1/index.htm
@@ -24,7 +24,23 @@
 <p>
 	<strong>INET</strong> Framework – <a href="https://inet.omnetpp.org/Introduction.html">“библиотека” сетевых моделей</a> для <nobr>OMNeT++</nobr>.
 </p>
-<img id="LLTR_a1_habr-pic" alt="КДПВ: LLTR Часть 1 – OMNeT++ 5 the Open Simulator :: LLTR Model :: for freedom use" align="center" height="330" src="https://hsto.org/webt/o5/dp/in/o5dpinus8lymcgvoehndedgvueu.gif#splash-preview.gif"/>
+<img id="LLTR_a1_habr-pic" alt="КДПВ: LLTR Часть 1 – OMNeT++ 5 the Open Simulator :: LLTR Model :: for freedom use" title="[историческая причина] Почему подобные изображения стали мерцать?:
+- www.imagemagick.org/discourse-server/viewtopic.php?t=22855#p95627
+- bugzilla.mozilla.org/show_bug.cgi?id=890743#c42
+- superuser.com/questions/569924/why-is-the-gif-i-created-so-slow
+- nullsleep.tumblr.com/post/16524517190/animated-gif-minimum-frame-delay-browser
+
+Немерцающий вариант см. в HTML ниже:" align="center" height="330" src="https://hsto.org/webt/o5/dp/in/o5dpinus8lymcgvoehndedgvueu.gif#splash-preview.gif"/>
+<!-- Немерцающий вариант:
+	<object id="LLTR_a1_habr-pic" data="https://hsto.org/getpro/habr/conversation/3dc/898/604/3dc898604a67a4f14aa77307d75c3898.svg" height="330" role="img" type="image/svg+xml" typemustmatch>
+		<img alt="КДПВ: LLTR Часть 1 – OMNeT++ 5 the Open Simulator :: LLTR Model :: for freedom use" height="330" src="https://hsto.org/webt/o5/dp/in/o5dpinus8lymcgvoehndedgvueu.gif#splash-preview.gif"/>
+	</object>
+	P.S. но у него есть свои проблемы:
+		1. это уже не <img> - сервисы наподобие Pocket могут не увидеть альтернативный <img>;
+		2. код в ссылке, переключающий на полную версию GIF станет более "толстым".
+	P.P.S. можно было сделать проще - в HTML при помощи стилей наложить один <img> (анимацию) на другой <img> (фон), но без стилей (AuthorCSS) это все развалится...
+	P.P.S. было бы проще, если браузеры поддерживали в GIF специальный флаг, позволяющий иметь нулевую задержку между кадрами.
+-->
 <p>
 	<a href="https://hsto.org/getpro/habr/post_images/a8b/399/99a/a8b39999a18513692acc46bd4ee80209.gif#splash.gif" title="Воспроизвести полную версию GIF" onclick="var _=document.getElementById('LLTR_a1_habr-pic');_.src='';_.src=this.href;return false;">Полная версия GIF (15.7 MiB)</a><!-- alt-src: "https://lh3.googleusercontent.com/eygPWMp_vdTCPQg_AGS7aeMrTHz0urNyG_hOa585IXBvJG-S7qDnv1Mn4Ji4ApmEkGExwLUIAm1TfgVJoBBPO1mg83UfJhQTW38wrF-9mdMSUi7eTOLElnvZxH5axPK6kpXVMVD3Uw=w500-h330-no", "https://github.com/ZiroKyl/LLTR-Simulation-Model/releases/download/a1_v0.1.0/splash.gif" -->
 </p>
