--- a/a2/index.htm
+++ b/a2/index.htm
@@ -892,7 +892,7 @@ int ...;{
 	<font color="#54524F"><b>Note</b>:</font> Первую (и вторую) итерацию лучше посмотреть без заглядывания в спойлеры (одновременное наблюдение за анимацией и чтение исходников может запутать). В частности, по этой причине я поместил в спойлеры кадр из анимации конкретного этапа.
 </p>
 <p>
-	<font color="#54524F"><b>Note</b>:</font> Не во всех браузерах GIF начнет проигрываться с начала (в начале есть надпись “Scroll Down”), для того, чтобы вернуться на начало, я сделал эту кнопку: <button onclick="var _=document.getElementById('fig_binarization'),uri=_.src;_.src='';_.src=uri;">с начала</button>
+	<font color="#54524F"><b>Note</b>:</font> Не во всех браузерах GIF начнет проигрываться с начала (в начале есть надпись “Scroll Down”), для того, чтобы вернуться на начало, я сделал эту кнопку: <button onclick="var _=document.getElementById('fig_binarization'),uri;uri=_.src;_.src='';_.src=uri;">с начала</button>
 </p>
 <img id="fig_binarization" alt="Анимация: бинаризация" align="center" height="1042" src="https://hsto.org/webt/7r/mf/m8/7rmfm8ntqxja04lzz5c0gwvzpc4.gif#binarization.gif"/>
 <details>
