Add URI to article 2

--- a/a1/index.htm
+++ b/a1/index.htm
@@ -4448,7 +4448,7 @@ diff  - 50.981</code></pre>
 
 <h2 id="to-be-continued"><a href="#to-be-continued" title="Ссылка на раздел"><font color="gray">#</font></a> В следующих частях / To be continued…</h2><hr />
 <ul>
-	<li>2. Алгоритм определения топологии сети по собранной статистике</li>
+	<li>2. <a href="https://habr.com/post/421243/">Алгоритм определения топологии сети по собранной статистике</a></li>
 	<li>3. <nobr>OMNeT++</nobr> продолжение</li>
 	<li>4. Математика</li>
 	<li>5. <nobr>OMNeT++</nobr> продолжение 2</li>
