--- a/a0/for_habra-parser.htm
+++ b/a0/for_habra-parser.htm
@@ -591,7 +591,8 @@ if(self == top){
 	<li>Эксперимент <font color="gray">(название‑спойлер: “<a title="фильм" href="#hack-is here"><font color="gray">в конце Джон умрет</font></a>”)</font></li>
 </ol>
 <p><br />
-	Эта часть: в <a href="https://zirokyl.github.io/LLTR-Simulation-Model/a0/">GitHub Pages</a>.
+	Эта часть: в <a href="https://zirokyl.github.io/LLTR-Simulation-Model/a0/">GitHub Pages</a>;<br />
+	<anchor>doi</anchor><a href="https://doi.org/10.5281/zenodo.1406970" title="Цифровой идентификатор статьи"><img alt="DOI: 10.5281/zenodo.1406970" width="186" height="20" src="https://zenodo.org/badge/DOI/10.5281/zenodo.1406970.svg"/></a>
 </p>
 <hr />
 <spoiler title="Про опечатки и другие улучшения…"><hr />
