--- a/a0/index.htm
+++ b/a0/index.htm
@@ -612,5 +612,6 @@ if(self == top){
 <p>
 	<a href="https://habr.com/post/414799/#comments" title="Вернуться на Хабр">Комментарии на Хабре →</a>
 </p>
+<a href="https://doi.org/10.5281/zenodo.1406970" title="Цифровой идентификатор этой статьи"><img id="doi" alt="DOI: 10.5281/zenodo.1406970" height="20" src="https://zenodo.org/badge/DOI/10.5281/zenodo.1406970.svg"/></a>
 </body>
 </html>
