--- a/a1/for_habra-parser.htm
+++ b/a1/for_habra-parser.htm
@@ -4086,7 +4086,8 @@ diff  - 50.981</source>
 	<li>7. Эксперимент <font color="gray">(название‑спойлер: “<a title="фильм" href="#hack-is here"><font color="gray">в конце Джон умрет</font></a>”)</font></li>
 </ul>
 <p><br />
-	Эта часть: в <a href="https://zirokyl.github.io/LLTR-Simulation-Model/a1/">GitHub Pages</a>.
+	Эта часть: в <a href="https://zirokyl.github.io/LLTR-Simulation-Model/a1/">GitHub Pages</a>;<br />
+	<anchor>doi</anchor><a href="https://doi.org/10.5281/zenodo.1407029" title="Цифровой идентификатор статьи"><img alt="DOI: 10.5281/zenodo.1407029" width="186" height="20" src="https://zenodo.org/badge/DOI/10.5281/zenodo.1407029.svg"/></a>
 </p>
 
 <br /><h2><anchor>poll</anchor><a href="#poll" title="Ссылка на раздел"><font color="gray">#</font></a> Обратная связь</h2><hr />
