--- a/a1/index.htm
+++ b/a1/index.htm
@@ -4466,5 +4466,6 @@ diff  - 50.981</code></pre>
 <p>
 	<a href="https://habr.com/post/420327/#comments" title="Вернуться на Хабр">Открыть комментарии →</a>
 </p>
+<a href="https://doi.org/10.5281/zenodo.1407029" title="Цифровой идентификатор этой статьи"><img id="doi" alt="DOI: 10.5281/zenodo.1407029" height="20" src="https://zenodo.org/badge/DOI/10.5281/zenodo.1407029.svg"/></a>
 </body>
 </html>
