--- a/a2/for_habra-parser.htm
+++ b/a2/for_habra-parser.htm
@@ -1718,5 +1718,6 @@ var archive = res.filter(function(a){return a.search(/(omnetpp.org\/doc\/omnetpp
 		</p>
 	<hr /></spoiler>
 <hr /></spoiler>
+<br /><anchor>doi</anchor><a href="https://doi.org/10.5281/zenodo.1407060" title="Цифровой идентификатор этой статьи"><img alt="DOI: 10.5281/zenodo.1407060" height="20" src="https://zenodo.org/badge/DOI/10.5281/zenodo.1407060.svg"/></a>
 </body>
 </html>
