--- a/a2/index.htm
+++ b/a2/index.htm
@@ -1810,5 +1810,6 @@ var archive = res.filter(function(a){return a.search(/(omnetpp.org\/doc\/omnetpp
 <p>
 	<a href="https://habr.com/post/421243/#comments" title="Вернуться на Хабр">Комментарии на Хабре →</a>
 </p>
+<a href="https://doi.org/10.5281/zenodo.1407060" title="Цифровой идентификатор этой статьи"><img id="doi" alt="DOI: 10.5281/zenodo.1407060" height="20" src="https://zenodo.org/badge/DOI/10.5281/zenodo.1407060.svg"/></a>
 </body>
 </html>
